[package]
name = "job-system"
authors = ["Antonio Villavicencio"]
version = "0.1.0"
edition = "2024"
description = "A Custom Job System for a Future Project of Mine"
license = "MIT"
keywords = ["gamedev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2.9"
num_cpus = "1.17.0"
parking_lot = "0.12.4"

[lib]
name = "jobsys"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]
